k8s/services/eos/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-egress-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-eos
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "1094"
              protocol: ANY
            - port: "1095"
              protocol: ANY
            - port: "1097"
              protocol: ANY
            - port: "7777"
              protocol: ANY
            - port: "1100"
              protocol: ANY
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-authentik-ldap
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: services-authentik
            goauthentik.io/outpost-name: ldap-outpost
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
